Agregado el detalle de Terminales al clickear (SelectedIndexChange) en registro de grilla - Default

--- a/TerminalesD2/SitiosTerminales/Web.config
+++ b/TerminalesD2/SitiosTerminales/Web.config
@@ -7,7 +7,7 @@
 
 <configuration>
   <connectionStrings>
-    <add name="Obligatorio2Entities" connectionString="metadata=res://*/Obligatorio2.csdl|res://*/Obligatorio2.ssdl|res://*/Obligatorio2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Obligatorio2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="Obligatorio2Entities" connectionString="metadata=res://*/Obligatorio2.csdl|res://*/Obligatorio2.ssdl|res://*/Obligatorio2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-DKKE1H3\SQLEXPRESS;initial catalog=Obligatorio2;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
     <system.web>
       <compilation debug="true" targetFramework="4.5.2" />
